contact form width correction on mobile view

--- a/contact.scss
+++ b/contact.scss
@@ -581,15 +581,15 @@ body {
     .info {
       gap: 1rem;
       .info-input {
-        width: 370px;
+        width: 90vw;
         .name-email {
           flex-direction: column;
           box-sizing: border-box;
-          width: 100%;
+          width: 81vw;
           input {
             padding: 1rem;
             font-size: 18px;
-            width: 335px;
+            width: 100%;
           }
         }
       }
